<resources>
    <string name="app_name">BookWay</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_orders">Orders</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_me_up">SIGN ME UP</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="your_name">Your Name</string>
    <string name="sign_up">Sign Up.</string>
    <string name="login_in">Log In.</string>
    <string name="login_in_w_dot">Log In</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_for_otp_to_arrive">Waiting for otp to arrive</string>
    <string name="auto_verify_unsuccessful_kindly_try_manually">Enter OTP for manual verification!</string>
    <string name="validate">Validate</string>
    <string name="_choose_text">Choose from many hotels available in X locations.\nWelcome to BookWay #!</string>
    <string name="sample_location">Sample Location</string>
    <string name="loading_location">Loading Location</string>
    <string name="your_profile">your profile</string>
    <string name="phone_91000000000">Phone : +91000000000</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="customize">Let\'s Customize</string>
    <string name="profile">BookWay Profile</string>
    <string name="your">Your</string>
    <string name="udaan_dekeling_resort">Udaan Dekeling Resort</string>
    <string name="_2_hawk_s_nest_ajc_bose_rd_near_alpine_school_darjeeling_west_bengal_734101">2, Hawk\'s Nest, AJC Bose Rd, near Alpine School, Darjeeling, West Bengal 734101</string>
    <string name="_6_out_of_24_rooms_available">6 out of 24 rooms available</string>
    <string name="long_text">long text....</string>
    <string name="parking_available_24x7">Parking Available 24X7</string>
    <string name="_2_adult_beds">2 Adult Beds</string>
    <string name="_2_child_beds">2 Child Beds</string>
    <string name="inr_2205">INR 2205</string>
    <string name="free_wifi_available_24x7">Free WiFi Available 24X7</string>
    <string name="_4_7">4.7</string>
    <string name="show_description">Show Description</string>
    <string name="book_room">Book Room</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="_9th_july">9th July</string>
    <string name="adult_beds_needed">Adult Beds Needed</string>
    <string name="child_bed_needed">Child Bed Needed</string>
    <string name="payment_is_done_at_reception">Payment &amp; bed credits done at reception^</string>
    <string name="inr_xxxx_in_total_for_xxx_days">INR XXXX in total for XXX days.</string>
    <string name="log_out">Log Out</string>
    <string name="you_currently_have_no_bookings_nthanks_for_using_bookway">You currently have no bookings.\nThanks for using BookWay</string>
    <string name="request_cancellation">Request Cancellation</string>
    <string name="check_in_01_01_1001">Check-in : 01/01/1001</string>
    <string name="check_out_01_01_1001">Check-out : 01/01/1001</string>
    <string name="current_status_staying_in">Current Status : Staying In</string>
</resources>