<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotel_room_images"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/hotel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_regular"
                android:padding="6dp"
                android:text="@string/udaan_dekeling_resort"
                android:textSize="22sp"
                app:drawableStartCompat="@drawable/ic_address" />

            <TextView
                android:id="@+id/hotel_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/_2_hawk_s_nest_ajc_bose_rd_near_alpine_school_darjeeling_west_bengal_734101"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/hotel_room_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/_6_out_of_24_rooms_available"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_yes"
                app:drawableStartCompat="@drawable/ic_room" />

            <TextView
                android:id="@+id/hotel_parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/parking_available_24x7"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_yes"
                app:drawableStartCompat="@drawable/ic_parking" />

            <TextView
                android:id="@+id/hotel_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/free_wifi_available_24x7"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_yes"
                app:drawableStartCompat="@drawable/ic_wifi" />

            <TextView
                android:id="@+id/hotel_room_adult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/_2_adult_beds"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_room_adult" />

            <TextView
                android:id="@+id/hotel_room_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/_2_child_beds"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_room_child" />

            <TextView
                android:id="@+id/hotel_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/phone_91000000000"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/hotel_room_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/inr_2205"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_price" />

            <TextView
                android:id="@+id/hotel_room_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_light"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/_4_7"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_rating" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/hotel_show_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/hotel_dining_facilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/proxima_asi_light"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/long_text"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_dining" />

                <TextView
                    android:id="@+id/hotel_hotel_facilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/proxima_asi_light"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/long_text"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_hotel_fac" />

                <TextView
                    android:id="@+id/hotel_room_facilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/proxima_asi_light"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:text="@string/long_text"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_room_fac" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_desc"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/show_description" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/book_hotel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/book_room" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</com.google.android.material.card.MaterialCardView>